add payment and subItems images with origin

--- a/SoftwarePal/appsettings.json
+++ b/SoftwarePal/appsettings.json
@@ -14,5 +14,9 @@
     "ValidIssuer": "http://localhost:61955",
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
   },
+  "PayPalSettings": {
+    "ClientId": "YOUR_CLIENT_ID",
+    "SecretKey": "YOUR_SECRET_KEY"
+  },
   "AllowedHosts": "*"
 }
