--- a/.github/workflows/master_esoftwarepal.yml
+++ b/.github/workflows/master_esoftwarepal.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - esoftwarepal
 
 on:
@@ -42,6 +39,11 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
+      - name: Delete old artifacts
+        run: |
+          echo "Deleting old artifacts..."
+          rm -rf ${{env.DOTNET_ROOT}}/myapp
+
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
