--- a/.github/workflows/master_esoftwarepal.yml
+++ b/.github/workflows/master_esoftwarepal.yml
@@ -1,3 +1,6 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
 name: Build and deploy ASP.Net Core app to Azure Web App - esoftwarepal
 
 on:
@@ -39,11 +42,6 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - name: Delete old artifacts
-        run: |
-          echo "Deleting old artifacts..."
-          rm -rf ${{env.DOTNET_ROOT}}/myapp
-
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
@@ -55,5 +53,5 @@ jobs:
         with:
           app-name: 'esoftwarepal'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_612D673AAA7145D4A59D999336CC1C11 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1669C0152FAE4600A6F513F5328D84FF }}
           package: .
