--- a/.github/workflows/master_esoftwarepal.yml
+++ b/.github/workflows/master_esoftwarepal.yml
@@ -42,6 +42,11 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
+      - name: Delete old artifacts
+        run: |
+          echo "Deleting old artifacts..."
+          rm -rf ${{env.DOTNET_ROOT}}/myapp
+          
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
